@startuml
hide circle
skinparam classAttributeIconSize 0
class CommandHandler {
    - parts : String
    + runCommand()
}
class TASync {
}
class CommandFactory {
    + createCommand(commandString : String): Command
}
class UI {
    + printWelcome()
    + displayDailySchedule()
    + printMessage()
    + getUserCommand()
    + printLogin()
    + printCreatePasswordMenu()
    + printDottedLine()
    + printGoodbye()
    + close()
}
class CommandParser {
    - parts[]: String
    + getParts: String[]
}
class TutorialClassList {
    + getTutorialClasses()
    + addTutorialClass()
    + getTutorialByName()
    + removeTutorialClass()
}
class CommandLoopHandler {
    - ui : UI
    - taskList : TaskList
    - studentList : StudentList
    - tutorialList : TutorialClassList
    - attendanceFile : AttendanceFile
    - dataManager : DataManager
    + runCommandLoop()
}
class AttendanceFile {
    + getAttendanceList()
    + getAttendanceByNameAndWeek()
    + addAttendanceList()
}
class DataLoader{
    + loadTutorialClasses()
    + loadAttendanceFile(tutorialList : TutorialClassList)
}
class DataManager{
    - DIRECTORY_PATH : String
    - TUTORIAL_FILE_PATH : String
    - ATTENDANCE_FILE_PATH : String
    - MARKS_FILE_PATH : String
    + loadTutorials()
    + loadAttendanceFiles(classList : TutorialClassList)
    + loadMarks(tutorialClassList : TutorialClassList)
    + saveTutorials(tutorialList: TutorialClassList)
    + saveAttendanceFile(attendanceFile : AttendanceFile)
    + saveMarksList(tutorialList: TutorialClassList)
    + getTutorialFilePath() : String
    + getAttendanceFilePath() : String
    + ensureFileAndDirectoryExist(filePath :String, directoryPath: String )

}

class TaskCommands

class MarksCommands

class AttendanceListCommands

class StudentCommands

class TutorialCommands

class XYZFileLoaders

class XYZFileSavers

interface "<<interface>> \n FileLoader<T>" {
    + loadFromFile() : T
}

interface "<<interface>> \n FileSaver<T>" {
    + saveToFile(data: T) : void
}

interface "<<interface>> Command<T>" {
    + execute(parts : String , target : T) : void
}

CommandLoopHandler --> UI
CommandLoopHandler --> AttendanceFile
CommandLoopHandler --> TutorialClassList
CommandLoopHandler --> CommandParser
CommandLoopHandler --> CommandHandler
CommandHandler --> CommandFactory
CommandFactory --> "<<interface>> Command<T>"
CommandHandler --> "<<interface>> Command<T>"
CommandHandler --> StudentList
CommandHandler --> TutorialClassList
CommandHandler --> AttendanceFile
CommandHandler --> TaskList
CommandHandler --> MarksList
CommandLoopHandler --> DataManager
TASync --> CommandLoopHandler
TASync --> DataLoader
TASync --> DataManager
DataLoader o-- DataManager
DataManager --> "<<interface>> \n FileSaver<T>"
DataManager --> "<<interface>> \n FileLoader<T>"

"<<interface>> Command<T>"  <|.. TaskCommands : <<implements>>
"<<interface>> Command<T>"  <|.. MarksCommands : <<implements>>
"<<interface>> Command<T>"  <|.. AttendanceListCommands : <<implements>>
"<<interface>> Command<T>"  <|.. StudentCommands : <<implements>>
"<<interface>> Command<T>"  <|.. TutorialCommands : <<implements>>

"<<interface>> \n FileLoader<T>" <|.. XYZFileLoaders : <<implements>>
"<<interface>> \n FileSaver<T>" <|.. XYZFileSavers : <<implements>>


Task <|-- Todo
Task <|-- Deadline
Task <|-- Event
Task <|-- Consultation
TaskList --> Task
TutorialClassList --> TutorialClass
StudentList --> Student
MarksList --> Marks
AttendanceFile --> AttendanceList


@enduml